perf: preloads fonts, and prevents invisible text

--- a/public/assets/fonts/preload.css
+++ b/public/assets/fonts/preload.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "Bellefair";
-  src: url("./Bellefair-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Barlow Condensed";
-  src: url("./BarlowCondensed-Regular.ttf");
+  src: url("/assets/fonts/Bellefair-Regular.ttf");
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Barlow Condensed";
-  src: url("./BarlowCondensed-Bold.ttf");
+  src: url("/assets/fonts/BarlowCondensed-Regular.ttf");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Barlow Condensed";
+  src: url("/assets/fonts/BarlowCondensed-Bold.ttf");
   font-weight: 700;
+  font-display: swap;
 }
